--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
-theme: jekyll-theme-minimal 
+theme: jekyll-theme-minimal
+title: Lucida28
+description: This is pratice for add theme to local website by jekyll
